--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,9 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <% include header %>
+    
+    <input type="button" value="로그인" onclick="movein()">
   </body>
+  <script src="/javascripts/index.js"></script>
 </html>
