--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,8 @@
       <input type="button" value="로그인" onclick="movein()">
     <% }else{ %> 
       <p>Welcome <%= nick %></p>
-      <input type="button" value="로그아웃" onclick=logout();>
+      <input type="button" value="마이페이지" onclick="member()">
+      <input type="button" value="로그아웃" onclick="logout()";>
     <% } %> 
   </body>
   <script src="/javascripts/index.js"></script>
