--- a/views/member.ejs
+++ b/views/member.ejs
@@ -10,7 +10,7 @@
     <div class = "total">
         <div class = "left">
             <div class = "user">
-                <p><%= nick %>님 환영합니다!</p>
+                <p><%= nick %>'s Page</p>
             </div>
             <div class = "my_friends">
 
@@ -18,13 +18,13 @@
         </div>
         <div class = "right">
             <div class = "game_start">
-
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Bt2escpWj8Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class = "community">
 
             </div>
             <div class = "friends_list">
-
+                <p></p>
             </div>
         </div>
     </div>
