--- a/views/community.ejs
+++ b/views/community.ejs
@@ -8,8 +8,11 @@
 <body>
     <% include header %>
     <h2><%= title %></h2>
-    <form action="/community">
-        
+    <form action="/community" method="POST">
+        <ul>
+            <li>nick</li>
+            <li></li>
+        </ul>
     </form>
 </body>
 </html>
