--- a/views/member.ejs
+++ b/views/member.ejs
@@ -12,20 +12,16 @@
             <div class = "user">
                 <p><%= nick %>'s Page</p>
             </div>
-            <div class = "my_friends">
-
+            <div class = "myAttractions">
+                <% myAttractions %> 
             </div>
         </div>
         <div class = "right">
-            <div class = "game_start">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Bt2escpWj8Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class = "community">
 
+            <div class = "community">
+                
             </div>
-            <div class = "friends_list">
-                <p></p>
-            </div>
+        
         </div>
     </div>
 </body>
