--- a/views/view1.ejs
+++ b/views/view1.ejs
@@ -3,11 +3,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
+    <title>Document</title>
 </head>
 <body>
-    <% for(let i = 1; i<7; i++){ %>
-        <a href="/view/<%= i %>">attraction<%= i %></a>
-    <% } %> 
+    
 </body>
 </html>
