--- a/views/view.ejs
+++ b/views/view.ejs
@@ -25,7 +25,6 @@
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 </head>
 <body>
-    <% include header %>
     <h2><%= title %></h2>
     <div class = "chat">
         <ul>
@@ -33,7 +32,7 @@
             <li><img src="https://cdn1.parksmedia.wdprapps.disney.com/resize/mwImage/1/1600/900/75/dam/wdpro-assets/dlr/parks-and-tickets/attractions/disneyland/casey-jr-circus-train/casey-jr-circus-train-00.jpg?1559891100710" alt="어트랙션"></li>
             <li><img src="https://cdn1.parksmedia.wdprapps.disney.com/resize/mwImage/1/1600/900/75/dam/disneyland/attractions/disneyland/casey-jr-circus-train/casey-jr-matterhorn-16x9.jpg?1559891100710" alt=""></li>
                 <!-- 댓글 쓰는 곳 -->
-                <form action="/view/<%= data[0].attraction %>/write" method="POST">
+                <form action="/view/<%= id %>/write" method="POST">
                     <ul>
                         <li><input name = "comment" placeholder="Please Write Down here" required>
                             <input type="submit" value="upload">
@@ -41,36 +40,39 @@
                     </ul>
                 </form>
                 <!-- 댓글 보여주는 곳 -->
-                <% data.forEach(function(item, index){ %>
-                    <% if(logined==true && item.nick == nick){ %>
-                        <!-- 좋아요 기능 
-                            <form action="/view/<%= //item.attraction %>/like" method = "POST">
-                            <input type="hidden" name = "like" value = "1">
-                        </form> -->
-                        <span class = "comment-nick"> <%= item.nick %> </span>
-                        <span class = "fas-container">
-                            <i class = "fas fa-comment"></i>
-                        </span>
-                        <% if(update == true && item.num == num){ %>
-                            <form action="/view/<%= item.attraction %>/submit/<%= item.num %>" method = "POST">
-                                <input type="text" name = "updateComment" value="<%= item.comment %> ">
-                                <input type="submit" value = "conform">
-                            </form>
-                            <a href="/view/<%= item.attraction %>/delete/<%= item.num %>">delete</a>
+                <% if(data.length != 0){ %>
+                    <% data.forEach(function(item, index){ %>
+                        <% if(logined==true && item.nick == nick){ %>
+                            <!-- 좋아요 기능 
+                                <form action="/view/<%= //item.attraction %>/like" method = "POST">
+                                <input type="hidden" name = "like" value = "1">
+                            </form> -->
+                            <span class = "comment-nick"> <%= item.nick %> </span>
+                            <span class = "fas-container">
+                                <i class = "fas fa-comment"></i>
+                            </span>
+                            <% if(update == true && item.num == num){ %>
+                                <form action="/view/<%= item.attraction %>/submit/<%= item.num %>" method = "POST">
+                                    <input type="text" name = "updateComment" value="<%= item.comment %> ">
+                                    <input type="submit" value = "conform">
+                                </form>
+                                <a href="/view/<%= item.attraction %>/delete/<%= item.num %>">delete</a>
+                            <% }else{ %>
+                                <span><%= item.comment %></span>
+                                <a href="/view/<%= item.attraction %>/update/<%= item.num %>">update</a>
+                                <a href="/view/<%= item.attraction %>/delete/<%= item.num %>">delete</a>
+                            <% } %>
                         <% }else{ %>
+                            <span class = "comment-nick"> <%= item.nick %> </span>
+                            <span class = "fas-container">
+                                <i class = "fas fa-comment"></i>
+                            </span>
                             <span><%= item.comment %></span>
-                            <a href="/view/<%= item.attraction %>/update/<%= item.num %>">update</a>
-                            <a href="/view/<%= item.attraction %>/delete/<%= item.num %>">delete</a>
                         <% } %>
-                    <% }else{ %>
-                        <span class = "comment-nick"> <%= item.nick %> </span>
-                        <span class = "fas-container">
-                            <i class = "fas fa-comment"></i>
-                        </span>
-                        <span><%= item.comment %></span>
-                    <% } %>
-                    <span><%= moment(item.created_at).format('YY.MM.DD hh:mm:ss') %> </span>
-                <% }) %>
+                        <span><%= moment(item.created_at).format('YY.MM.DD hh:mm:ss') %> </span>
+                    <% }) %>
+                <% } %>
+
         </ul>
     </div>
     <script src="/javascripts/index.js"></script>
