--- a/public/stylesheets/member.css
+++ b/public/stylesheets/member.css
@@ -1,9 +1,101 @@
+body{
+    background-color : black;
+    color : white;
+}
+a{
+    color : white;
+}
 .myAttractions ul li{
     /* display : list-item; */
     list-style-image: url("../../paris.svg");
 }
 .ticket{
-    display : flex;
+    display : grid;
+    grid-template-rows : minmax(100px, 500px);
+    grid-template-columns: 3fr 0.5fr 3fr minmax(50px, 70px);
     
 }
-
+/* 왼쪽, 오른쪽, 가운데 정렬 */
+.ticket-left{
+    grid-area: 1/1;
+    display : grid;
+    grid-template-rows: 3fr repeat(6, 0.5fr);
+    grid-template-columns: 1;
+    border : 5px solid white;
+    /* background-color: teal; */
+}
+.ticket-center{
+    grid-area: 1/2;
+    display : grid;
+    grid-template-rows: 1;
+    grid-template-columns: 2;
+    border : 5px solid white;
+    /* background-color: rgb(165, 49, 49); */
+}
+.ticket-right{
+    grid-area: 1/3;
+    display : grid;
+    grid-template-rows: 3;
+    grid-template-columns: 1;
+    border : 5px solid white;
+    /* background-color: rgb(105, 128, 0); */
+}
+/* 내용 구분 */
+.ticket-title{
+    font-size: 5em;
+    /* background : linear-gradient(45deg, rgb(247, 202, 201), rgb(145, 168, 209)); */
+    /* background : linear-gradient(90deg, rgb(0, 0, 0), rgb(255, 255, 255)); */
+    /* background:
+    radial-gradient(circle at 50% 0,
+      rgba(255,0,0,.5),
+      rgba(255,0,0,0) 70.71%),
+    radial-gradient(circle at 6.7% 75%,
+      rgba(0,0,255,.5),
+      rgba(0,0,255,0) 70.71%),
+    radial-gradient(circle at 93.3% 75%,
+      rgba(0,255,0,.5),
+      rgba(0,255,0,0) 70.71%) beige; */
+    grid-area : 1/1;
+}
+.label-name{
+    grid-area : 2/1;
+}
+.ticket-name{
+    grid-area : 3/1;
+}
+.label-desti{
+    grid-area : 4/1;
+}
+.destination{
+    grid-area : 5/1;
+}
+.label-date{
+    grid-area : 6/1;
+}
+.ticket-date{
+    grid-area : 7/1;
+}
+.bdl{
+    writing-mode :vertical-rl;
+    grid-area: 1/1;
+    font-size: 1em;
+    text-align: center;
+    letter-spacing : 17px;
+}
+.barcode{
+    writing-mode :vertical-rl;
+    grid-area : 1/2;
+}
+.ticket-mickey{
+    grid-area : 1/1;
+}
+.ticket-img{
+    width : 60%;
+    height : 45%;
+}
+.ticket-head{
+    grid-area : 2/1;
+}
+.ticket-welcome{
+    grid-area : 3/1;
+}
