--- a/views/member.ejs
+++ b/views/member.ejs
@@ -4,12 +4,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %> </title>
-
+    <link rel="stylesheet" href="../stylesheets/member.css">
 </head>
 <body>
-    <h2><%= title %></h2>
+        <h2><%= nick %>'s Page</h2>
     <div class = "total">
-        <div class = "left">
+                <% if(ticket == true){ %>
+                <div class = "ticket">
+                    <div class = "ticket-left">
+                        <div class = "ticket-title">Happy DISNEYDAY</div>
+                        <div class = "label-name">NAME</div>
+                        <div class = "ticket-name">이거 이름으로 바꿔라</div>
+                        <div class = "label-desti">DESTINATION</div>
+                        <div class = "destination">BLACK DISNEYLAND</div>
+                        <div class = "label-date">DATE</div>
+                        <div class = "ticket-date"><%= moment(date).format('YY.MM.DD') %></div>
+                    </div>
+                    <div class = "ticket-center">
+                        <div class = "bdl">BLACK DISNEYLAND</div>
+                        <div class = "barcode"><img src="../images/barcode.jpg" alt="바코드">이거 바코드 랜덤으로 할지 결정하기</div>
+                    </div>
+                    <div class = "ticket-right">
+                        <div class = "ticket-mickey">
+                            <% if(head == 1){ %>
+                                <img class = "ticket-img" src="../images/1h.jpg" alt="one">
+                                <div class = "ticket-head">Admit <%= head %></div>
+                                <div class = "ticket-welcome">you are going to BLACK DISNEY</div>
+                            <% }else if(head == 2){ %>
+                                <img class = "ticket-img" src="../images/2h.jpg" alt="two">
+                                <div class = "ticket-head">Admit <%= head %></div>
+                                <div class = "ticket-welcome">you are going to BLACK DISNEY</div>
+                            <% }else if(head == 3){ %>
+                                <img class = "ticket-img" src="../images/3h.jpg" alt="three">
+                                <div class = "ticket-head">Admit <%= head %></div>
+                                <div class = "ticket-welcome">you are going to BLACK DISNEY</div>
+                            <% }else{ %>
+                                <img class = "ticket-img" src="../images/4h.jpg" alt="four">
+                                <div class = "ticket-head">Admit <%= head %></div>
+                                <div class = "ticket-welcome">you are going to BLACK DISNEY</div>
+                            <% } %> 
+                        </div>
+                        
+                    </div>
+                <% }else{ %>
+                    <p>예약한 티켓이 없습니다!</p>
+                <% } %> 
+                </div>
+            
+            <a href="/reserve">reserve</a>
+        <div class = "pass">
             <div class = "user">
                 <p><%= nick %>'s Page</p>
             </div>
@@ -20,23 +63,6 @@
                     <li><%= attraction3 %></li>
                 </ul>
             </div>
-        </div>
-        <div class = "right">
-
-            <% if(ticket == true){ %>
-                <div class = "ticket">
-                    <div class = "ticket-nick"><%= nick %></div>
-                    <div class = "ticket-date"><%= date %></div>
-                    <div class = "ticket-head"><%= head %></div>
-                    <!-- 2인일 때 띄우는 이미지 -->
-                    <!-- <% //if(data[0].head == 2){ %>
-                        <img src="" alt="">
-                    <% //} %>  -->
-                </div>
-            <% }else{ %>
-                <p>예약한 티켓이 없습니다!</p>
-            <% } %> 
-            <a href="/reserve">reserve</a>
         </div>
     </div>
 </body>
