--- a/views/community.ejs
+++ b/views/community.ejs
@@ -9,5 +9,6 @@
     <% for(let i = 1; i<7; i++){ %>
         <a href="/view/<%= i %>">attraction<%= i %></a>
     <% } %> 
+    <% include map %> 
 </body>
 </html>
