--- a/public/stylesheets/member.css
+++ b/public/stylesheets/member.css
@@ -22,6 +22,7 @@ a{
     grid-template-rows: 3fr repeat(6, 0.5fr);
     grid-template-columns: 1;
     border : 5px solid white;
+    padding : 20px;
     /* background-color: teal; */
 }
 .ticket-center{
@@ -41,8 +42,53 @@ a{
     /* background-color: rgb(105, 128, 0); */
 }
 /* 내용 구분 */
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:800);
+
+.box-with-text {
+  background-image: -webkit-linear-gradient(rgb(0, 0, 0) 50%, white 50%);
+  background-repeat: repeat;
+  background-position: 0 0;
+  background-size: 100% 50px;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-animation: stripes 2s linear infinite;
+  animation: stripes 2s linear infinite;
+}
+
+@-webkit-keyframes stripes {
+  100% {
+    background-position: 0 -50px;
+  }
+}
+
+@keyframes stripes {
+  100% {
+    background-position: 0 -50px;
+  }
+}
+/* Other stuff */
+/* body {
+  overflow: hidden;
+  background: #000;
+  color: #FFF;
+} */
+
+.box-with-text {
+    grid-area : 1/1;
+  position: absolute;
+  font-size: 4.5rem;
+  top: 13%;
+  left: 21%;
+  white-space: nowrap;
+  text-align: center;
+  text-transform: uppercase;
+  font: bold Open Sans, Impact;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  -ms-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
 .ticket-title{
-    font-size: 5em;
+    
     /* background : linear-gradient(45deg, rgb(247, 202, 201), rgb(145, 168, 209)); */
     /* background : linear-gradient(90deg, rgb(0, 0, 0), rgb(255, 255, 255)); */
     /* background:
@@ -55,7 +101,7 @@ a{
     radial-gradient(circle at 93.3% 75%,
       rgba(0,255,0,.5),
       rgba(0,255,0,0) 70.71%) beige; */
-    grid-area : 1/1;
+    
 }
 .label-name{
     grid-area : 2/1;
@@ -98,4 +144,53 @@ a{
 }
 .ticket-welcome{
     grid-area : 3/1;
+}
+
+/* 티켓 움직이는 부분 */
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+
+svg {
+    display: block;
+    font: 5em 'Montserrat';
+    width: 50%;
+    height: 20%;
+    margin: 0 auto;
+}
+
+.text-copy {
+    fill: none;
+    stroke: white;
+    stroke-dasharray: 6% 29%;
+    stroke-width: 10px;
+    stroke-dashoffset: 0%;
+    animation: stroke-offset 5.5s infinite linear;
+}
+
+.text-copy:nth-child(1){
+	stroke: #000000;
+	animation-delay: -1s;
+}
+
+.text-copy:nth-child(2){
+	stroke: #ffffff;
+	animation-delay: -2s;
+}
+
+.text-copy:nth-child(3){
+	stroke: #000000;
+	animation-delay: -3s;
+}
+
+.text-copy:nth-child(4){
+	stroke: #ffffff;
+	animation-delay: -4s;
+}
+
+.text-copy:nth-child(5){
+	stroke: #000000;
+	animation-delay: -5s;
+}
+
+@keyframes stroke-offset{
+	100% {stroke-dashoffset: -35%;}
 }
