--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,20 +2,6 @@
 <html>
   <head>
     <title><%= title %></title>
-    <style>
-      canvas{
-        background: transparent;
-        width: 100vw;
-        height: 65vh;
-        padding: 0;
-        margin: auto;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 0;
-      }
-    </style>
-
     <link rel='stylesheet' href='/stylesheets/svg1.css' />
     <link rel="stylesheet" href="/stylesheets/index.css">
     <style>
@@ -25,22 +11,28 @@
     </style>
   </head>
   <body>
-    <!-- <img class = "main" src="/images/main.jpg" alt="메인화면"> -->
-    <h1 class = "welcome">Welcome to <%= welcome %></h1>
+    
     <div>
-      <% //include svg1 %>
+      
       <% if(logined == false){ %> 
+        <h1 class = "welcome">Welcome to <%= welcome %></h1>
+        <% //include svg1 %>
         <div class = "login-position">
           <% include login %> 
         </div>
         
       <% }else{ %> 
-        <p>Welcome <%= nick %></p>
-        <!-- <canvas class = "index-position"></canvas> -->
+        <div class="sign">
+          <span class="fast-flicker">Welcome</span><span class="flicker"><%= nick %></span>
+        </div>
+        <canvas class = "index-position"></canvas>
+        <% //include svg1 %>
+        
         <input class = "btn_mypage" type="button" value="마이페이지" onclick="member()">
         <input class = "btn_logout" type="button" value="로그아웃" onclick="logout()">
         <input class = "btn_write" type="button" value="커뮤니티" onclick= "community()">
       <% } %> 
+      
     </div>
     <script src="/javascripts/index.js"></script>
     <script src="/javascripts/animate.js" ></script>
