--- a/views/reserve.ejs
+++ b/views/reserve.ejs
@@ -8,30 +8,17 @@
     <link rel="stylesheet" href="../stylesheets/reserve.css">
 </head>
 <body>
-    <% include header %>
-    <h2><%= title %></h2>
-    <!-- 티켓 구매 -->
-    <form action="/reserve/ticket" method = "POST">
-        <input type="date" name="reserveDate" min="2021-03-25" max="2021-04-25">
-        <input class = "slider-range" type="range" name = "headCount" value = "1" min="1" max="4" step = "1">
-        <font id = "slider-value">1</font>
-        <input type="submit" value = "Buy Ticket">
-    </form>
+    <div class="reservation-container">
+        <h2><%= title %></h2>
+        <!-- 티켓 구매 -->
+        <form class = "ticket" action="/reserve/ticket" method = "POST">
+            <input type="date" name="reserveDate" min="2021-03-25" max="2021-04-25">
+            <input class = "slider-range" type="range" name = "headCount" value = "1" min="1" max="4" step = "1">
+            <font id = "slider-value">1</font>
+            <input type="submit" value = "Buy Ticket">
+        </form>
+    </div>
 
-    <!-- 어트랙션 패스권 -->
-    <form action="/reserve/pass" method="POST">
-        <span class = "dropdown">
-            <input type = "radio" name = "attraction" id = "a" value="Alice in Wonderland" checked = "checked"><label for="a">Alice in Wonderland</label>
-            <input type = "radio" name = "attraction" id = "b" value="Buzz Lightyear Astro Blasters"><label for="b">Buzz Lightyear Astro Blasters</label>
-            <input type = "radio" name = "attraction" id = "c" value="Circus Train"><label for="c">Circus Train</label>
-            <input type = "radio" name = "attraction" id = "d" value="Dumbo the Flying Elephant"><label for="d">Dumbo the Flying Elephant</label>
-            <input type = "radio" name = "attraction" id = "g" value="Golden Zephyr"><label for="g">Golden Zephyr</label>
-            <input type = "radio" name = "attraction" id = "i" value="Incredicoster"><label for="i">Incredicoster</label>
-            <input type = "radio" name = "attraction" id = "r" value="Riverboat"><label for="r">Riverboat</label>
-            <input type = "radio" name = "attraction" id = "s" value="Space Mountain"><label for="s">Space Mountain</label>
-        </span>
-        <input type="submit" value = "Free Pass">
-    </form>
 
 
     <script>
