--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
         <input class = "input-pwd" type="password" name="pwd" placeholder="비밀번호를 입력하세요.">
         <input class = "submit-login" type="submit" value="login">
     </form>
-    <input class = "input-signup" type="button" value="Join Us!" onclick="moveup()">
+    <a class = "input-signup" href="/sign_up">Join Us!</a>
     <script src="/javascripts/index.js"></script>
 </body>
 </html>
