--- a/views/member.ejs
+++ b/views/member.ejs
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %> </title>
+    <title>My Page</title>
     <link rel="stylesheet" href="../stylesheets/member.css">
     <style>
         .ticket-img{
@@ -52,7 +52,6 @@
                                 <div class = "ticket-welcome">you are going to BLACK DISNEY</div>
                             <% } %> 
                         </div>
-                        
                     </div>
                 <% }else{ %>
                     <p>예약한 티켓이 없습니다!</p>
