--- a/views/pass.ejs
+++ b/views/pass.ejs
@@ -4,6 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free Pass</title>
+    <link rel="stylesheet" href="../stylesheets/pass.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </head>
 <body>
     <div class = "pass">
@@ -29,66 +31,24 @@
             <span class = "dropdown-btn"><input type="submit" value = "Free Pass"></span>
         </form>
     <!-- 
-        어트랙션 예약 queue
+        어트랙션 예약 queue 다른 방법 : 
         1. 1시간이 지날 경우, 어트랙션 예약이 자동으로 취소된다. 
         2. update(3->2), update(2->1), delete(3)
         3. update(2->1), delete(2)
         4. delete(1) 
      -->
-
-
+     <script>
+        //패스권 선택
+        $('.dropdown').click(function(e) {
+            e.preventDefault();
+            e.stopPropagation();
+            $(this).toggleClass('expanded');
+            $('#'+$(e.target).attr('for')).prop('checked',true);
+        });
+        $(document).click(function() {
+            $('.dropdown').removeClass('expanded');
+        });
+    </script>
+    <script src="/javascripts/index.js"></script>
 </body>
 </html>
-
-<script>
-
-// post INSERT -> SELECT '수영' 데이터 없어? ? 그냥 넣고 -> 1시간 뒤에 삭제되는 함수를 실행 
-// INSERT -> SELECT -> 데이터가 있어? 그냥 넣어 끝
-// setinterval(fucnt (){데이터를 찾아 }),1000 * 60 * 60) 
-
-// function tlqkf () {
-//         setInterval(function(){
-//             query('select * from reser where nick 수영'){
-//                 if data.length == 0 {
-//                     setinterval 꺼주세요
-//                 }
-//                 else{
-//                     delete 첫번째꺼
-//                 }
-//             }
-//         },1000*60*60)
-//     }
-
-    router.get('/insert', req res {
-        // 지금 날짜 변수 설정
-
-        // select ->
-        // if result X -> insert 지금 날짜로 넣고-> tlqkf() 
-        // else if { data.length == 3}{
-        //     res.send ('scr arlet 시발 3개 했잖아 개새캬 ')
-        // }
-        // else {
-        //     query insert  시간 더하기 1시간 을 해서 쿼리에 넣어줘야겠즤?
-        //     3번째
-        //     2번째 시간 가져와서 한시간 더 더한디
-        //     첫번째꺼가 삭제되면 2번쨰가 첫번째가 되잖아?
-        //     그럼
-        //     똑같이
-        //     세번쨰에 있던 애가 2번째로 변해서 그썌기의 값을 가져와서 1시간을 더하면 될듯 한데?
-        //     할 수 있게어
-        //      복잡하긴한데 사실 그렇게 복잡한진 않아 생각을 너무 어렵게 해서ㅗ 그렇지 그치
-        //      그러면
-        //      너가 저거 화면에서 예약한 어트랙션을 볼때
-        //      이름만 나오는게 아니라
-        //      그새끼의 시간까지 나오게 해야게찌?
-        //      자 그러면 
-        //     date 정보를 저장하지말고ㅓ
-        //     varchar 로 저장을 해서
-        //     이용가능시간을 (현시각 ~ 현시각 + 1시간)로 저장
-
-        // }
-    } )
-    
-
-    
-</script>
